sCurrentPaintTimeStamp is not initialized when FrameView::paintContents returns in the middle https://bugs.webkit.org/show_bug.cgi?id=99990

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-02
Reviewed by Darin Adler.

Move initialization code for sCurrentPaintTimeStamp to the below of early returns,
because it was not reset after early return.

* page/FrameView.cpp:
(WebCore::FrameView::paintContents):

git-svn-id: svn://svn.chromium.org/blink/trunk@133391 bbb929c8-8fbe-4397-9dbb-9b2b20218538